1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el, emu-nemacs.el, emu-latin1.el, EMU-ELS: Move definitions
	of emu-nemacs.el and emu-latin1.el to emu.el; abolish
	emu-nemacs.el and emu-latin1.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el: Modify conditions to load sub-modules.

	* emu.el, emu-e20.el: Move alias
	`insert-binary-file-contents-literally' from emu-e20.el to emu.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poem.el, emu.el: Move `string-as-unibyte',
	`string-as-multibyte', `char-int', `int-char' and
	`char-or-char-int-p' from emu.el to poem.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mcharset.el, emu.el: Move function `charsets-to-mime-charset'
	from emu.el to mcharset.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el, emu-x20.el, emu-nemacs.el, emu-mule.el, emu-latin1.el,
	emu-e20.el:
	  - Move `insert-binary-file-contents' from emu-e20.el,
	    emu-latin1.el, emu-mule.el, emu-nemacs.el and emu-x20.el to
	    emu.el.
	  - Move `insert-binary-file-contents-literally' from
	    emu-latin1.el, emu-mule.el, emu-nemacs.el and emu-x20.el to
	    emu.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe-18.el (make-obsolete): New function.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el, EMU-ELS: Split code about MIME charset from emu to
	mcharset.

	* mcharset.el: New file.

	* mcs-xm.el: New file (split code about MIME charset from
	emu-x20.el).

	* emu-x20.el: Split code about MIME charset to mcs-xm.el.

	* mcs-om.el: New file (split code about MIME charset from
	emu-mule.el).

	* emu-mule.el: Split code about MIME charset to mcs-om.el.

	* mcs-nemacs.el: New file (split code about MIME charset from
	emu-nemacs.el).

	* emu-nemacs.el: Split code about MIME charset to mcs-nemacs.el.

	* mcs-ltn1.el: New file (split code about MIME charset from
	emu-latin1.el).

	* emu-latin1.el: Split code about MIME charset to mcs-latin1.el.
